--- a/app/views/links/new.erb
+++ b/app/views/links/new.erb
@@ -8,9 +8,10 @@
     Url:<br><br>
     <input type="text" name="url">
   </label>
-  <label for="tag">
+  <br><br>
+  <label for="tags">
     Tag:<br><br>
-    <input type="text" name="tag">
+    <input type="text" name="tags">
   </label>
-  <input type="submit" value="Submit">
+  <input type="submit" value="Create link">
 </form>
