--- a/app/views/user/new.erb
+++ b/app/views/user/new.erb
@@ -11,7 +11,11 @@
   <br><br>
   <label for="password">
     Create a password:<br><br>
-    <input type="text" name="password">
+    <input type="text" name="password" type='password'>
+  </label>
+  <label for="password_confirmation">
+    Confirm your password:<br><br>
+    <input type="text" name="password_confirmation" type='password'>
   </label>
   <input type="submit" value="Create account">
 </form>
