--- a/app/views/user/new.erb
+++ b/app/views/user/new.erb
@@ -1,3 +1,5 @@
+<%="#{flash[:password_fail]}" if flash[:password_fail]%>
+
 <form action="/user/new" method="post">
   <label for="username">
     Fill in your username:<br><br>
@@ -6,7 +8,7 @@
   <br><br>
   <label for="email">
     Fill in your email:<br><br>
-    <input type="text" name="email">
+    <input name='email' type='text' value='<%= @user.email %>'>
   </label>
   <br><br>
   <label for="password">
