--- a/app/views/user/new.erb
+++ b/app/views/user/new.erb
@@ -8,7 +8,7 @@
   <br><br>
   <label for="email">
     Fill in your email:<br><br>
-    <input name='email' type='text' value='<%= @user.email %>'>
+    <input name='email' type='text' value='<%= @user.email %>' required>
   </label>
   <br><br>
   <label for="password">
