--- a/app/views/user/new.erb
+++ b/app/views/user/new.erb
@@ -1,4 +1,15 @@
-<%="#{flash[:password_fail]}" if flash[:password_fail]%>
+<% if flash[:errors] && !flash[:errors].empty? %>
+  Please refer to the following errors below:
+  <ul id='errors'>
+    <% flash[:errors].each do |error| %>
+      <li><%= error %></li>
+    <% end %>
+  </ul>
+<% end %>
+
+
+
+
 
 <form action="/user/new" method="post">
   <label for="username">
